# quartz

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: linux_install.md
src/: main.cpp
src/assets/shapes/: capsule_low.glb  cube.glb  plane.glb
src/core/: core.h  settings.h
src/shaders/: g_frag.glsl  g_vert.glsl
src/vulkan/: buffer.cpp  buffer.h  camera.cpp  camera.h  command.cpp  command.h  context.cpp  context.h  depth.cpp  depth.h  descriptor.cpp  descriptor.h  frame_manager.cpp  frame_manager.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  renderer.cpp  renderer.h  swapchain.cpp  swapchain.h  sync.cpp  sync.h  text.cpp  text.h  texture.cpp  texture.h  transform.cpp  transform.h  window.cpp  window.h
